--- a/src/style/overrides.scss
+++ b/src/style/overrides.scss
@@ -6,7 +6,6 @@ $cyan: #55C4D4;
 @import "~bulma/bulma";
 
 
-
 html, body {
   min-height: 100%;
   background: #ECF0F3;
@@ -33,6 +32,6 @@ nav.navbar {
 
 }
 
-#content-container {
+#content-body {
   margin-top: 5rem;
 }
