Add external link icons

--- a/src/style/overrides.scss
+++ b/src/style/overrides.scss
@@ -23,6 +23,17 @@ nav.navbar {
   font-weight: 700;
 }
 
+.menu-list {
+  a {
+    .icon {
+      color: #ccc;
+      margin-right: 6px;
+    }
+  }
+}
+
+
+
 .tiles {
   margin: 1rem 0;
 
