Add touch screen-size specific top margin

--- a/src/style/overrides.scss
+++ b/src/style/overrides.scss
@@ -56,5 +56,10 @@ nav.navbar {
 }
 
 #content-body {
-  margin-top: 5rem;
+  @include touch {
+    margin-top: 8rem;
+  }
+  @include desktop {
+    margin-top: 5rem;
+  }
 }
