--- a/src/style/overrides.scss
+++ b/src/style/overrides.scss
@@ -5,6 +5,7 @@ $cyan: #55C4D4;
 // @import "~bulma/sass/utilities/functions";
 @import "~bulma/bulma";
 
+@import "~bulma-checkradio";
 
 html, body {
   min-height: 100%;
